// Code generated by protoc-gen-go. DO NOT EDIT.
// versions:
// 	protoc-gen-go v1.28.1
// 	protoc        v3.19.6
// source: tinypenguin/task.proto

syntax = "proto3";

package tinypenguin;
option go_package = "example.com/tinypenguin/pkg/pb";

import "google/protobuf/timestamp.proto";

service TaskService {
  rpc ExecuteTask(ExecuteTaskRequest) returns (stream ExecuteTaskResponse) {}
  rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse) {}
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
}

message ExecuteTaskRequest {
  string query = 1;
}

message ExecuteTaskResponse {
  oneof response {
    TaskStarted task_started = 1;
    TaskOutput task_output = 2;
    TaskCompleted task_completed = 3;
    TaskError task_error = 4;
  }
}

message TaskStarted {
  string task_id = 1;
}

message TaskOutput {
  string output = 1;
}

message TaskCompleted {
  string result = 1;
}

message TaskError {
  string error = 1;
}

message CancelTaskRequest {
  string task_id = 1;  
}

message CancelTaskResponse {
  bool success = 1;
}

message ListTasksRequest {
  int32 page_size = 1;
  string page_token = 2;  
}

message ListTasksResponse {
  repeated Task tasks = 1;
  string next_page_token = 2;
}

message Task {
  string task_id = 1;
  string query = 2;
  TaskStatus status = 3;
  google.protobuf.Timestamp created_at = 4;
}

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_RUNNING = 1;
  TASK_STATUS_COMPLETED = 2;
  TASK_STATUS_CANCELLED = 3;
  TASK_STATUS_FAILED = 4;
}